--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -60,7 +60,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q1: Which statement is **true** regarding **precision** in a multi-class classification context? (1 point)\\nAnswer: {answer_q1()}')"
       ]
@@ -102,7 +102,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q2: Which statement correctly describes the confusion matrix in a multi-class setting?\\nAnswer: {answer_q2()}')"
       ]
@@ -144,7 +144,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q3: Which classifier typically uses bagging plus random subsets of features to reduce variance?\\nAnswer: {answer_q3()}')"
       ]
@@ -178,7 +178,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q3: If we see a high recall but low precision for a certain class, what does that usually imply?\\nAnswer: {answer_q4()}')"
       ]
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -224,6 +224,7 @@
         "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
         "from sklearn.model_selection import train_test_split\n",
         "# from sklearn.ensemble import RandomForestClassifier -> Choose your classifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.metrics import precision_score, recall_score\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ]
@@ -244,11 +245,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Shapes: (1728, 21) (1728,)\n"
+          ]
+        }
+      ],
       "source": [
         "def load_and_encode_car_data():\n",
         "    \"\"\"\n",
@@ -258,11 +267,20 @@
         "    4) return X, y\n",
         "    \"\"\"\n",
         "    # TODO\n",
+        "    df = pd.read_csv('car.csv')\n",
+        "    features = df.iloc[:, :-1]\n",
+        "    encoder = OneHotEncoder()\n",
+        "    X = encoder.fit_transform(features)\n",
+        "    \n",
+        "    label_encoder = LabelEncoder()\n",
+        "    y = label_encoder.fit_transform(df.iloc[:, -1])\n",
+        "\n",
+        "    return X, y\n",
         "    pass\n",
         "\n",
         "# demonstration\n",
-        "# X, y = load_and_encode_car_data()\n",
-        "# print(\"Shapes:\", X.shape, y.shape)\n",
+        "X, y = load_and_encode_car_data()\n",
+        "print(\"Shapes:\", X.shape, y.shape)\n",
         "pass"
       ]
     },
@@ -282,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -296,6 +314,11 @@
         "    4. return (model, X_test, y_test, y_pred)\n",
         "    \"\"\"\n",
         "    # TODO\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+        "    classifier = DecisionTreeClassifier()\n",
+        "    classifier.fit(X_train, y_train)\n",
+        "    y_pred = classifier.predict(X_test)\n",
+        "    return classifier, X_test, y_test, y_pred\n",
         "    pass"
       ]
     },
@@ -311,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -320,6 +343,7 @@
         "    Return confusion_matrix array (sklearn).\n",
         "    \"\"\"\n",
         "    # TODO\n",
+        "    return confusion_matrix(y_true, y_pred)\n",
         "    pass"
       ]
     },
@@ -339,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -350,6 +374,10 @@
         "    return that float\n",
         "    \"\"\"\n",
         "    # TODO\n",
+        "    precision = precision_score(y_true, y_pred, average=None)[class_idx]\n",
+        "    recall = recall_score(y_true, y_pred, average=None)[class_idx]\n",
+        "    f1 = 2 * (precision * recall) / (precision + recall)\n",
+        "    return f1\n",
         "    pass"
       ]
     },
@@ -368,9 +396,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Generate confmatrix:\n",
+            "[[ 71   0   0   1]\n",
+            " [  1  13   2   0]\n",
+            " [  0   0 246   0]\n",
+            " [  0   0   0  12]]\n",
+            "F1 for class 0 manually: 0.9861111111111112\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.99      0.99      0.99        72\n",
+            "           1       1.00      0.81      0.90        16\n",
+            "           2       0.99      1.00      1.00       246\n",
+            "           3       0.92      1.00      0.96        12\n",
+            "\n",
+            "    accuracy                           0.99       346\n",
+            "   macro avg       0.98      0.95      0.96       346\n",
+            "weighted avg       0.99      0.99      0.99       346\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "def generate_classification_report(y_true, y_pred):\n",
         "    \"\"\"\n",
@@ -378,19 +430,20 @@
         "    returns it\n",
         "    \"\"\"\n",
         "    # TODO\n",
+        "    return classification_report(y_true, y_pred)\n",
         "    pass\n",
         "\n",
         "\n",
         "# optional demonstration\n",
-        "# X, y = load_and_encode_car_data()\n",
-        "# model, X_te, y_te, y_pr = train_classifier(X,y)\n",
-        "# print(\"Generate confmatrix:\")\n",
-        "# cm = generate_confmatrix(y_te, y_pr)\n",
-        "# print(cm)\n",
-        "# f1class0 = manual_f1_for_class(y_te, y_pr, class_idx=0)\n",
-        "# print(\"F1 for class 0 manually:\", f1class0)\n",
-        "# rep = generate_classification_report(y_te, y_pr)\n",
-        "# print(rep)\n"
+        "X, y = load_and_encode_car_data()\n",
+        "model, X_te, y_te, y_pr = train_classifier(X,y)\n",
+        "print(\"Generate confmatrix:\")\n",
+        "cm = generate_confmatrix(y_te, y_pr)\n",
+        "print(cm)\n",
+        "f1class0 = manual_f1_for_class(y_te, y_pr, class_idx=0)\n",
+        "print(\"F1 for class 0 manually:\", f1class0)\n",
+        "rep = generate_classification_report(y_te, y_pr)\n",
+        "print(rep)\n"
       ]
     }
   ],
@@ -399,7 +452,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "ise",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -413,7 +466,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.6"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
