--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -224,7 +224,8 @@
         "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
         "from sklearn.model_selection import train_test_split\n",
         "# from sklearn.ensemble import RandomForestClassifier -> Choose your classifier\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
+        "#from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.metrics import precision_score, recall_score\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ]
@@ -245,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 26,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
@@ -268,13 +269,11 @@
         "    \"\"\"\n",
         "    # TODO\n",
         "    df = pd.read_csv('car.csv')\n",
-        "    features = df.iloc[:, :-1]\n",
+        "    features = df[['buying', 'maint', 'doors', 'persons', 'lug_boot', 'safety']]\n",
         "    encoder = OneHotEncoder()\n",
         "    X = encoder.fit_transform(features)\n",
-        "    \n",
-        "    label_encoder = LabelEncoder()\n",
-        "    y = label_encoder.fit_transform(df.iloc[:, -1])\n",
-        "\n",
+        "    class_mapping = {'unacc': 0, 'acc': 1, 'good': 2, 'vgood': 3}\n",
+        "    y = df['class'].map(class_mapping).values\n",
         "    return X, y\n",
         "    pass\n",
         "\n",
@@ -300,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 27,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -315,7 +314,8 @@
         "    \"\"\"\n",
         "    # TODO\n",
         "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
-        "    classifier = DecisionTreeClassifier()\n",
+        "    #classifier = DecisionTreeClassifier()\n",
+        "    classifier = RandomForestClassifier()\n",
         "    classifier.fit(X_train, y_train)\n",
         "    y_pred = classifier.predict(X_test)\n",
         "    return classifier, X_test, y_test, y_pred\n",
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -404,21 +404,21 @@
           "output_type": "stream",
           "text": [
             "Generate confmatrix:\n",
-            "[[ 71   0   0   1]\n",
-            " [  1  13   2   0]\n",
-            " [  0   0 246   0]\n",
-            " [  0   0   0  12]]\n",
-            "F1 for class 0 manually: 0.9861111111111112\n",
+            "[[231   3   0   0]\n",
+            " [  1  77   0   1]\n",
+            " [  0   4  14   0]\n",
+            " [  0   2   0  13]]\n",
+            "F1 for class 0 manually: 0.9914163090128757\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.99      0.99      0.99        72\n",
-            "           1       1.00      0.81      0.90        16\n",
-            "           2       0.99      1.00      1.00       246\n",
-            "           3       0.92      1.00      0.96        12\n",
+            "           0       1.00      0.99      0.99       234\n",
+            "           1       0.90      0.97      0.93        79\n",
+            "           2       1.00      0.78      0.88        18\n",
+            "           3       0.93      0.87      0.90        15\n",
             "\n",
-            "    accuracy                           0.99       346\n",
-            "   macro avg       0.98      0.95      0.96       346\n",
-            "weighted avg       0.99      0.99      0.99       346\n",
+            "    accuracy                           0.97       346\n",
+            "   macro avg       0.95      0.90      0.92       346\n",
+            "weighted avg       0.97      0.97      0.97       346\n",
             "\n"
           ]
         }
