ANswer 3 - realised i never returned them as arrays

--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 32,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
@@ -274,7 +274,7 @@
         "    X = encoder.fit_transform(features)\n",
         "    class_mapping = {'unacc': 0, 'acc': 1, 'good': 2, 'vgood': 3}\n",
         "    y = df['class'].map(class_mapping).values\n",
-        "    return X, y\n",
+        "    return (X, y)\n",
         "    pass\n",
         "\n",
         "# demonstration\n",
@@ -299,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 33,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -318,7 +318,7 @@
         "    classifier = RandomForestClassifier()\n",
         "    classifier.fit(X_train, y_train)\n",
         "    y_pred = classifier.predict(X_test)\n",
-        "    return classifier, X_test, y_test, y_pred\n",
+        "    return (classifier, X_test, y_test, y_pred)\n",
         "    pass"
       ]
     },
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -404,20 +404,20 @@
           "output_type": "stream",
           "text": [
             "Generate confmatrix:\n",
-            "[[231   3   0   0]\n",
-            " [  1  77   0   1]\n",
-            " [  0   4  14   0]\n",
-            " [  0   2   0  13]]\n",
-            "F1 for class 0 manually: 0.9914163090128757\n",
+            "[[240   4   0   0]\n",
+            " [  4  68   0   1]\n",
+            " [  0   1  12   2]\n",
+            " [  0   0   0  14]]\n",
+            "F1 for class 0 manually: 0.9836065573770492\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       1.00      0.99      0.99       234\n",
-            "           1       0.90      0.97      0.93        79\n",
-            "           2       1.00      0.78      0.88        18\n",
-            "           3       0.93      0.87      0.90        15\n",
+            "           0       0.98      0.98      0.98       244\n",
+            "           1       0.93      0.93      0.93        73\n",
+            "           2       1.00      0.80      0.89        15\n",
+            "           3       0.82      1.00      0.90        14\n",
             "\n",
             "    accuracy                           0.97       346\n",
-            "   macro avg       0.95      0.90      0.92       346\n",
+            "   macro avg       0.93      0.93      0.93       346\n",
             "weighted avg       0.97      0.97      0.97       346\n",
             "\n"
           ]
