--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 50,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
@@ -274,7 +274,7 @@
         "    X = encoder.fit_transform(features)\n",
         "    class_mapping = {'unacc': 0, 'acc': 1, 'good': 2, 'vgood': 3}\n",
         "    y = df['class'].map(class_mapping).values\n",
-        "    return (X, y)\n",
+        "    return X, y\n",
         "    pass\n",
         "\n",
         "# demonstration\n",
@@ -299,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 51,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -313,12 +313,12 @@
         "    4. return (model, X_test, y_test, y_pred)\n",
         "    \"\"\"\n",
         "    # TODO\n",
-        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2,random_state=42)\n",
         "    #classifier = DecisionTreeClassifier()\n",
-        "    classifier = RandomForestClassifier()\n",
-        "    classifier.fit(X_train, y_train)\n",
-        "    y_pred = classifier.predict(X_test)\n",
-        "    return (classifier, X_test, y_test, y_pred)\n",
+        "    model = RandomForestClassifier()\n",
+        "    model.fit(X_train, y_train)\n",
+        "    y_pred = model.predict(X_test)\n",
+        "    return (model, X_test, y_test, y_pred)\n",
         "    pass"
       ]
     },
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
@@ -404,21 +404,21 @@
           "output_type": "stream",
           "text": [
             "Generate confmatrix:\n",
-            "[[240   4   0   0]\n",
-            " [  4  68   0   1]\n",
-            " [  0   1  12   2]\n",
-            " [  0   0   0  14]]\n",
-            "F1 for class 0 manually: 0.9836065573770492\n",
+            "[[235   0   0   0]\n",
+            " [  3  72   7   1]\n",
+            " [  0   0  10   1]\n",
+            " [  0   2   0  15]]\n",
+            "F1 for class 0 manually: 0.9936575052854123\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.98      0.98      0.98       244\n",
-            "           1       0.93      0.93      0.93        73\n",
-            "           2       1.00      0.80      0.89        15\n",
-            "           3       0.82      1.00      0.90        14\n",
+            "           0       0.99      1.00      0.99       235\n",
+            "           1       0.97      0.87      0.92        83\n",
+            "           2       0.59      0.91      0.71        11\n",
+            "           3       0.88      0.88      0.88        17\n",
             "\n",
-            "    accuracy                           0.97       346\n",
-            "   macro avg       0.93      0.93      0.93       346\n",
-            "weighted avg       0.97      0.97      0.97       346\n",
+            "    accuracy                           0.96       346\n",
+            "   macro avg       0.86      0.91      0.88       346\n",
+            "weighted avg       0.97      0.96      0.96       346\n",
             "\n"
           ]
         }
